force-app/main/default/objects/Integration_Logs__c/fields/Body_JSON__c.field-meta.xml
<CustomField>
    <fullName>Body_JSON__c</fullName>
    <description>Json del Request que genero el error</description>
    <label>Body JSON</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>