force-app/main/default/objects/Integration_Logs__c/fields/Clase__c.field-meta.xml
<CustomField>
    <fullName>Clase__c</fullName>
    <description>Nombre de la clase de error</description>
    <label>Clase</label>
    <type>TextArea</type>
</CustomField>