force-app/main/default/objects/Integration_Logs__c/fields/Linea__c.field-meta.xml
<CustomField>
    <fullName>Linea__c</fullName>
    <description>Línea en la que se genero el error</description>
    <label>Linea</label>
    <type>TextArea</type>
</CustomField>