force-app/main/default/objects/Integration_Logs__c/fields/Mensaje_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Mensaje_SFDC__c</fullName>
    <description>Exception de salesforce</description>
    <label>Mensaje SFDC</label>
    <type>TextArea</type>
</CustomField>