force-app/main/default/objects/Integration_Logs__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Tipo de error</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CREACION_CLIENTES_SFDC</fullName>
            </value>
            <value>
                <fullName>CREACION_CLIENTES_SAP</fullName>
            </value>
            <value>
                <fullName>TOKEN_IIS</fullName>
            </value>
            <value>
                <fullName>CREAR_PEDIDO_SF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>