force-app/main/default/objects/Integration_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Clase__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Mensaje_SFDC__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Tipo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>