force-app/main/default/objects/Integration_Logs__c/listViews/Logs_Pedido.listView-meta.xml
<ListView>
    <fullName>Logs_Pedido</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Clase__c</columns>
    <columns>Linea__c</columns>
    <columns>Mensaje_SFDC__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo__c</field>
        <operation>equals</operation>
        <value>CREAR_PEDIDO_SF</value>
    </filters>
    <label>Logs Creación Pedido</label>
</ListView>